# agent-benchmark-lab

./: .gitignore  README.md  benchmark  package-lock.json  package.json  pyproject.toml
benchmarks/suites/: advanced.json  calibration.json  comprehensive-screening-v1.json  foundation.json  hard-discrimination.json  optics-discrimination.json  personal-probe.json  process.json  real-smoke.json  selection-ladder.json  swebench-pilot.json  test-writing.json  unified-hard.json
config/: authoritative_corpora.json  authoritative_pilots.json  decision_index_profiles.json  harnesses.example.json  model_registry.example.json
docs/: adapter_contract.md  architecture.md  benchmark_readiness_audit.md  browser_visual_verification.md  capability_taxonomy.md  claude_code_handoff.md  conversation_requirements.md  corpus_strategy.md  delivery_plan.md  developer_guide.md  evidence_and_corpus.md  handoff.md  implementation_status.md  model_modes.md  next_agent_prompt.md  personal_v1.md  project_journal.md  real_harness_calibration.md  real_harness_smoke.md  requirements.md  research_notes.md  roadmap.md  run_log_schema.md  scoring.md  screening_exam_policy.md  task_provenance.md  unified_scoring.md  user_guide.md  user_guide_plain.md
docs/adr/: 0001-experiment-config-and-registries.md  0002-evidence-backed-safety-scoring.md  0003-zero-until-evidenced-dimensions.md  (+3 more)
scripts/: capture_browser_screenshot.mjs  run_calibration_matrix.sh  run_personal_probe.sh  setup_authoritative_evaluators.sh
status/: implementation_status.json
tests/: test_framework.py
(+249 files in other folders)
