[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-benchmark-lab"
version = "0.1.0"
description = "Evidence-backed benchmark lab for coding harness/model combinations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
agent-benchmark = "agent_benchmark.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
